Add my website files

--- a/index.html
+++ b/index.html
@@ -1,105 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adebisi's personal site</title>
+  <meta charset="utf-8">
+  <title>Snipes jnr</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <table cellspacing="20px">
-        <tr>
-            <td><img src="images/Adebisi.png" alt="Adebisi Profile Picture"></td>
-            <td>
-                <h1>Adeniyi Adebisi</h1>
-                <p><em>student of <strong>unilorin</strong>.</em></p>
-                <p><em><a href="http://physicalsciences.unilorin.edu.ng/index.php/" target="_blank">Faculty of physical science</a></em>
-                </p>
-                <p><em><strong><a href="images/department of geophysics.jpg" target="_blank">Department of Geophysics</a></strong></em>
-                </p>
-                <p><em>I'm a student and Web developer. I love❤️ coding</em>.</p>
-            </td>
-        </tr>
-    </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Adebisi.</h1>
+    <h2>a web developer.</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="adebisi-img" src="images/Adebisi.png" alt="Adebisi-img">
+      <h2>Hello There!</h2>
+      <p class="intro">I am a web developer. I'm a student in the University of Ilorin<strong>[Unilorin]</strong>. I 💖 coding.</p>
+    </div>
     <hr>
-    <h3>Course Codes</h3>
-    <ul >
-        <li>GPH 212</li>
-        <li>GPH 222</li>
-        <li>GPH 234</li>
-        <li>GPH 208</li>
-    </ul>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="images/design&development.png" alt="design&development-img">
+        <h3>Web Design & Development</h3>
+        <p>I started learning to code when I was 16 years old because, I wanted to create my own video games. Over time, I have gained a wealth experience designing and developing website.</p>
+      </div>
+      <div class="skill-row">
+        <img class="pes-img" src="images/pes.png" alt="pes-img">
+        <h3>Pro Evolution Soccer(PES) Challenge</h3>
+        <p>But my best skill is actually in playing Pes. I am the undisputed king of Pes Challenge. Barcelona and Psg are my favourite teams.</p>
+      </div>
+    </div>
     <hr>
-    <h3>School Experience</h3>
-    <table cellspacing="30px">
-        <thead>
-            <tr>
-                <th>Years</th>
-                <th>Admission</th>
-                <th>Location</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2018-2019</td>
-                <td>Unilorin Prilliminary Program</td>
-                <td>Fufu</td>
-            </tr>
-            <tr>
-                <td>2019-2023</td>
-                <td>Unilorin (P.S)</td>
-                <td>Permanent site</td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table>
-        <tr>
-            <td>
-                <table cellspacing="30px">
-                    <tr>
-                        <td>HTML</td>
-                        <td>😐😐😐</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>😐😐😐</td>
-                    </tr>
-                    <tr>
-                        <td>Web Design</td>
-                        <td>😒😒</td>
-                    </tr>
-                    <tr>
-                        <td>Web Development</td>
-                        <td>😒</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table cellspacing="30px">
-                    <tr>
-                        <td>PES</td>
-                        <td>😄😄😄😄</td>
-                    </tr>
-                    <tr>
-                        <td>Computer</td>
-                        <td>😄😄😄😄</td>
-                    </tr>
-                    <tr>
-                        <td>Football</td>
-                        <td>😐😐😐</td>
-                    </tr>
-                    <tr>
-                        <td>Driving</td>
-                        <td>😐😐😐</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <a href="hobbies.html" target="blank">My Hobbies</a>
-    <p><a href="contact-me.html" target="blank">Contact Me</a></p>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love PES as much as I do.</h3>
+      <p class="contact-message">Love PES as much as I do? Lets see how good we both are! We can have fun after coding.</p>
+      <a class="btn" href="mailto:snipesjnr0@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/adebisi-adeniyi-0a0a73232/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Snipes53955012">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">©2022 Adebisi Adeniyi.</p>
+  </div>
+
 </body>
+
 </html>
