Add changes to my website files

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/adebisi-adeniyi-0a0a73232/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/Snipes53955012">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://snipes633.github.io/CV/">Website</a>
     <p class="copyright">©2022 Adebisi Adeniyi.</p>
   </div>
 
